--- a/.gitconfig
+++ b/.gitconfig
@@ -32,3 +32,9 @@
   prune = true
 [include]
   path = ~/.gitconfig.local
+[github]
+	user = hktouw
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	required = true
+	clean = git-lfs clean -- %f
