--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal 'screen-256color'
 setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
-bind k select-pane -U
+# bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
